--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "framer-motion": "^10.12.18",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "swiper": "^10.0.4",
     "tailwindcss": "3.3.2"
   }
 }
